# licenciYa

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
src/: lib.rs  main.rs
src/api/: mod.rs  preguntas.rs
src/components/: footer.rs  header.rs  hero_section.rs  mod.rs  simulacro_dificil.rs  simulacro_facil.rs  simulacro_medio.rs  simulacro_section.rs
src/pages/: home.rs  mod.rs  simulacro.rs
src/resources/: answer.rs  question.rs
style/: output.css
